--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'economic_indicators'
 version: '1.0.0'
 config-version: 2
 
@@ -40,3 +40,15 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+
+models:
+  core:
+    
+    # Applies to all files under models/example/
+    - economic_indicators
+  
+  staging:
+    - stg_hdi
+    - stg_nominal_gdp_per_capita
+    - stg_population
+    - stg_ppp_gdp_per_capita
